# ITMO-se

./: README.md
algorithms&DS/contest/: CMakeLists.txt  taskA.cpp  taskB.cpp  taskC.cpp  taskD.cpp  taskH.cpp
programming/: README.md
programming-languages/assignment-3-image-rotation-master1/solution/: CMakeLists.txt
programming-languages/assignment-3-image-rotation-master1/solution/include/: image.h  image_bmp.h  transform_rotate.h
programming-languages/assignment-3-image-rotation-master1/solution/src/: file.c  image.c  image_bmp.c  main.c  transform_rotate.c
programming-languages/seminar6/: 3  3.c  bad  bad.c  heap-0  heap-0.c  heap-1  heap-1.c
programming-languages/seminar7/: stack-smash  tail-rec  tail-rec.c
programming-languages/stepik/: test  test.c
programming-languages/test/: CMakeLists.txt  main.c  test.c  test.h
programming/7/: 123.txt  pom.xml
programming/7/src/main/java/lab6/: Client.java  Server.java
programming/7/src/main/java/lab6/commands/: Command.java
programming/7/src/main/java/lab6/excepcions/: DataBaseException.java  InvalidAuthorizationException.java  LoadCollectionException.java  NoItemsAvailableToDeleteException.java  (+1 more)
programming/7/src/main/resources/: log4j2.xml
web/lab1/: index.html  main.css  main.js  main.php  oldMain.js
web/lab1/server/: Area.php  OldMain.php  Point.php  ScriptTime.php  clear.php  load.php  main.php
web/lab2/: pom.xml
web/lab2/src/main/webapp/: index.html  index.jsp
web/lab2/src/main/webapp/WEB-INF/: web.xml
web/lab2/src/main/webapp/css/: main.css
web/lab2/src/main/webapp/js/: main.js
(+39 files in other folders)
